fix: dark mode adjustments

--- a/public/styles.css
+++ b/public/styles.css
@@ -25,11 +25,6 @@
   text-align: center;
 }
 
-.portfolio.section,
-.get-in-touch.section {
-  background-color: #f7f7f7;
-}
-
 /* Know Me More  */
 .hr {
   height: 5px;
